--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.10.0",
     "vue": "^2.5.2",
+    "vue-amap": "^0.5.8",
     "vue-cookie": "^1.1.4",
     "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.0.1",
