--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "mint-ui": "^2.2.13",
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.10.0",
+    "qs": "^6.6.0",
     "vue": "^2.5.2",
     "vue-amap": "^0.5.8",
     "vue-cookie": "^1.1.4",
     "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.0.1",
+    "vue-socket.io": "^3.0.4",
     "vuex": "^3.0.1",
     "vux": "^2.9.2",
     "vux-loader": "^1.2.9"
